--- a/Eclipse/Views/Article/AddComment.cshtml
+++ b/Eclipse/Views/Article/AddComment.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-@model Eclipse.Models.ArticleModel
+@model Eclipse.Models.ArticleItemModel
 <div class="add-comment">
 <form action="@Url.Action("Index", "Home")" method="post" enctype="multipart/form-data">
     @Html.ValidationSummary()
