--- a/Eclipse/Views/Shared/_LayoutAdmin.cshtml
+++ b/Eclipse/Views/Shared/_LayoutAdmin.cshtml
@@ -15,8 +15,8 @@
         @RenderBody()
         <!-- end #content -->
         <div id="sidebar">
-            @Html.Action("Recent", "Comment")
-            @Html.Action("Recent", "Article")
+            @*@Html.Action("Recent", "Comment")
+            @Html.Action("Recent", "Article")*@
         </div>
         <!-- end #sidebar -->
         <div id="extra" style="clear: both;">&nbsp;</div>
