--- a/Eclipse/Views/Article/Recent.cshtml
+++ b/Eclipse/Views/Article/Recent.cshtml
@@ -2,17 +2,19 @@
     Layout = null;
 }
 @model Eclipse.Models.RecentPostsModel
-
+@{
+    Eclipse.Models.RecentPostsItem post = null;
+}
 <div class="boxed">
     <div class="title">
         <h2>Lorem Ipsum Dolor</h2>
     </div>
     <div class="content">
         <ul class="list1">
-            <li class="first"><a href="#">@Model.First.PostUri</a></li>
             @for (int i = 0; i < Model.RecentPostItems.Count; i++)
             {
-                <li><a href="#">@Model.RecentPostItems.ElementAt(i).PostUri</a></li>
+                post = Model.RecentPostItems.ElementAt(i);
+                <li><a href="@post.PostUri">@post.Title</a></li>
             }
         </ul>
     </div>
