--- a/Eclipse/Views/Comment/Recent.cshtml
+++ b/Eclipse/Views/Comment/Recent.cshtml
@@ -2,16 +2,19 @@
     Layout = null;
 }
 @model Eclipse.Models.CommentModel
+@{
+    Eclipse.Models.CommentItemModel comment = null;
+}
 <div class="boxed">
     <div class="title">
         <h2>Lorem Ipsum Dolor</h2>
     </div>
     <div class="content">
         <ul class="list1">
-            <li class="first"><a href="#">@Model.First.Text</a></li>
             @for (int i = 0; i < Model.Comments.Count; i++)
             {
-                <li><a href="#">@Model.Comments.ElementAt(i).Text</a></li>
+                 comment = Model.Comments.ElementAt(i);
+                <li><a href="@comment.Text">@comment.Text</a></li>
             }
         </ul>
     </div>
