--- a/Eclipse/Views/Home/Index.cshtml
+++ b/Eclipse/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <div id="content">
             <div id="welcome" class="post">
                 <div class="title">
-                    <h2>Welcome to Eclipse!</h2>
+                    <h2>@Model.Title</h2>
                 </div>
                 <h3 class="date"><span class="month">@Model.Date.ToString()</span> @*<span class="day">@Model.Date.Day</span><span class="year">, @Model.Date.Year</span>*@</h3>
                 <div class="meta">
