--- a/Eclipse/Views/Article/Recent.cshtml
+++ b/Eclipse/Views/Article/Recent.cshtml
@@ -7,7 +7,7 @@
 }
 <div class="boxed">
     <div class="title">
-        <h2>Lorem Ipsum Dolor</h2>
+        <h2>Recent Posts</h2>
     </div>
     <div class="content">
         <ul class="list1">
