--- a/Eclipse/Views/Login/Login.cshtml
+++ b/Eclipse/Views/Login/Login.cshtml
@@ -25,7 +25,7 @@
         <div class="title">
             <h2>Client Account</h2>
         </div>
-            <form id="form1" method="post" action="@Url.Action("Login", "Attempt")">
+            <form id="form1" method="post" action="@Url.Action("Index", "Login")">
                 <fieldset>
                     <legend>Sign-In</legend>
                     @Html.TextBoxFor(m => m.Name, new { placeholder = "Login:", @class = "textbox", id = "inputtext1" })
