--- a/Eclipse/Views/Article/Recent.cshtml
+++ b/Eclipse/Views/Article/Recent.cshtml
@@ -14,7 +14,9 @@
             @for (int i = 0; i < Model.RecentPostItems.Count; i++)
             {
                 post = Model.RecentPostItems.ElementAt(i);
-                <li><a href="@post.PostUri">@post.Title</a></li>
+
+                <li>@Html.RouteLink(@post.Title, "Post", new { @post.Title })
+ </li>
             }
         </ul>
     </div>
