--- a/Eclipse/Views/Comment/Recent.cshtml
+++ b/Eclipse/Views/Comment/Recent.cshtml
@@ -14,7 +14,7 @@
             @for (int i = 0; i < Model.Comments.Count; i++)
             {
                  comment = Model.Comments.ElementAt(i);
-                <li><a href="@comment.Text">@comment.Text</a></li>
+                <li><a href="/posts/@comment.PostTitle">@comment.Text</a></li>
             }
         </ul>
     </div>
