--- a/Eclipse/Views/Login/Index.cshtml
+++ b/Eclipse/Views/Login/Index.cshtml
@@ -5,7 +5,6 @@
 @section Header{
     <div id="logo">
         <h1><a href="#">Eclipse</a></h1>
-        <h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2>
     </div>
     <div id="menu">
         <ul>
@@ -19,8 +18,8 @@
 }
 
 <div id="content">
-       @Html.ActionLink("Add post", "Add");
-       @Html.ActionLink("See posts", "See");
-       @Html.ActionLink("Edit comments", "EditComments"); 
+       @Html.ActionLink("Add post", "Add")
+       <br />
+       @Html.ActionLink("See posts", "See")
 </div>
 
