--- a/Eclipse/Views/Login/Login.cshtml
+++ b/Eclipse/Views/Login/Login.cshtml
@@ -5,7 +5,6 @@
 @section Header{
     <div id="logo">
         <h1><a href="#">Eclipse</a></h1>
-        <h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2>
     </div>
     <div id="menu">
         <ul>
@@ -29,7 +28,7 @@
                 <fieldset>
                     <legend>Sign-In</legend>
                     @Html.TextBoxFor(m => m.Name, new { placeholder = "Login:", @class = "textbox", id = "inputtext1" })
-                    @Html.TextBoxFor(m => m.Password, new { placeholder = "Password:", @class = "textbox", id = "inputtext2" })
+                    @Html.PasswordFor(m => m.Password, new { placeholder = "Password:", @class = "textbox", id = "inputtext2" })
 
                     <input id="inputsubmit1" type="submit" name="inputsubmit1" value="Sign In" /> 
                 </fieldset>
