--- a/Eclipse/Views/Shared/Footer.cshtml
+++ b/Eclipse/Views/Shared/Footer.cshtml
@@ -1,4 +1,3 @@
 ﻿<div id="footer">
-    <p id="legal">Copyright &copy; 2007 Eclipse. All Rights Reserved. Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
-    <p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+    <p id="legal">Copyright &copy; 2015 Eclipse. All Rights Reserved.</p>
 </div>   
